# ecs-service-starter

./: LICENSE  README.md  main.py  pyproject.toml
tests/: test_main.py
