[project]
name = "ecs-service-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.78",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]